language/move-lang/tests/move_check/typing/subtype_args_invalid.exp
error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:10:9 ───
    │
 10 │         mut<u64>(&0);
    │         ^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut'. Invalid argument for parameter 'x'
    ·
 10 │         mut<u64>(&0);
    │                  -- The type: '&{integer}'
    ·
  4 │     fun mut<T>(x: &mut T) {}
    │                   ------ Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:11:9 ───
    │
 11 │         mut<u64>(&S{});
    │         ^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut'. Invalid argument for parameter 'x'
    ·
 11 │         mut<u64>(&S{});
    │                  ---- The type: '&0x8675309::M::S'
    ·
  4 │     fun mut<T>(x: &mut T) {}
    │                   ------ Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:15:9 ───
    │
 15 │         imm_mut<u64>(&0, &0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::imm_mut'. Invalid argument for parameter 'y'
    ·
 15 │         imm_mut<u64>(&0, &0);
    │                          -- The type: '&{integer}'
    ·
  5 │     fun imm_mut<T>(x: &T, y: &mut T) {}
    │                              ------ Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:16:9 ───
    │
 16 │         mut_imm<u64>(&0, &0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut_imm'. Invalid argument for parameter 'x'
    ·
 16 │         mut_imm<u64>(&0, &0);
    │                      -- The type: '&{integer}'
    ·
  6 │     fun mut_imm<T>(x: &mut T, y: &T) {}
    │                       ------ Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:17:9 ───
    │
 17 │         mut_mut<u64>(&0, &0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut_mut'. Invalid argument for parameter 'x'
    ·
 17 │         mut_mut<u64>(&0, &0);
    │                      -- The type: '&{integer}'
    ·
  7 │     fun mut_mut<T>(x: &mut T, y: &mut T) {}
    │                       ------ Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_args_invalid.move:17:9 ───
    │
 17 │         mut_mut<u64>(&0, &0);
    │         ^^^^^^^^^^^^^^^^^^^^ Invalid call of '0x8675309::M::mut_mut'. Invalid argument for parameter 'y'
    ·
 17 │         mut_mut<u64>(&0, &0);
    │                          -- The type: '&{integer}'
    ·
  7 │     fun mut_mut<T>(x: &mut T, y: &mut T) {}
    │                                  ------ Is not a subtype of: '&mut u64'
    │

